--- a/index.html
+++ b/index.html
@@ -2,83 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Piano Website</title>
+  <title>Aaradhya | Piano</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(120deg, #0f2027, #203a43, #2c5364);
-      color: white;
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: radial-gradient(circle at top, #1a1a2e, #0f0f1a);
+      color: #ffffff;
       text-align: center;
     }
+
     header {
-      padding: 80px 20px;
+      padding: 90px 20px;
     }
+
     h1 {
-      font-size: 48px;
+      font-size: 52px;
       margin-bottom: 10px;
+      letter-spacing: 2px;
     }
+
+    h2 {
+      font-size: 32px;
+      margin-bottom: 20px;
+    }
+
     p {
       font-size: 20px;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
+      line-height: 1.6;
     }
+
     section {
-      padding: 60px 20px;
-      background: rgba(0,0,0,0.3);
-      margin: 20px;
-      border-radius: 20px;
+      margin: 30px;
+      padding: 60px 25px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 25px;
+      box-shadow: 0 0 40px rgba(0,0,0,0.4);
     }
+
+    audio {
+      width: 300px;
+      margin-top: 20px;
+    }
+
     footer {
-      padding: 20px;
+      padding: 30px;
       font-size: 14px;
       opacity: 0.7;
     }
-    audio {
-      margin-top: 20px;
-      width: 300px;
-    }
   </style>
 </head>
+
 <body>
 
 <header>
-  <h1>🎹 My Piano World</h1>
-  <p>Welcome to my personal piano website.  
-     This space is about my music, practice, and journey.</p>
+  <h1>🎹 Aaradhya</h1>
+  <p>
+    Pianist • Learner • Music Lover
+  </p>
 </header>
 
 <section>
   <h2>About Me</h2>
   <p>
-    I am a piano learner who loves music and practice.
-    This website is created to share my piano progress,
-    performances, and love for music.
+    Hello! I am Aaradhya, a piano learner who loves music and practice.
+    Piano helps me express emotions and discipline.
+    This website is my personal space to share my musical journey.
   </p>
 </section>
 
 <section>
-  <h2>My Piano</h2>
+  <h2>My Piano Journey</h2>
   <p>
-    Piano helps me express emotions without words.
-    I practice daily and enjoy learning new pieces.
-  </p>
-</section>
+    I enjoy practicing classical pieces, national songs,
+    and learning music step by step.
+    Ever
 
-<section>
-  <h2>Listen</h2>
-  <p>Add your piano recording here:</p>
-  <!-- Replace sample.mp3 with your file -->
-  <audio controls>
-    <source src="sample.mp3" type="audio/mpeg">
-    Your browser does not support audio.
-  </audio>
-</section>
-
-<footer>
-  © 2026 • My Piano Website 🎶
-</footer>
-
-</body>
-</html>
