--- a/index.html
+++ b/index.html
@@ -2,243 +2,32 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Aaradhya | Piano</title>
+<title>Piano | Eyes</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-:root {
-  --bg: #070b18;
-  --card: #10172f;
-  --accent: #7dd3fc;
-  --text: #ffffff;
-}
-
-body {
-  margin: 0;
-  font-family: "Segoe UI", sans-serif;
-  background: radial-gradient(circle at top, #0a0f2a, #040612);
-  color: var(--text);
-}
-
-header {
-  padding: 90px 20px;
-  text-align: center;
-}
-
-h1 {
-  font-size: 56px;
-  margin: 0;
-}
-
-.subtitle {
-  font-size: 20px;
-  opacity: 0.8;
-}
-
-section {
-  max-width: 1000px;
-  margin: 30px auto;
-  padding: 40px;
-  background: rgba(255,255,255,0.04);
-  border-radius: 25px;
-  box-shadow: 0 20px 60px rgba(0,0,0,0.6);
-}
-
-h2 {
-  margin-top: 0;
-  color: var(--accent);
-}
-
-button {
-  padding: 12px 18px;
-  border-radius: 10px;
-  border: none;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.admin-btn {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: var(--accent);
-  color: black;
-}
-
-input, textarea {
-  width: 100%;
-  padding: 12px;
-  margin: 10px 0;
-  border-radius: 10px;
-  border: none;
-  font-size: 16px;
-}
-
-audio {
-  width: 100%;
-  margin-top: 10px;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
-  gap: 15px;
-}
-
-.gallery img {
-  width: 100%;
-  border-radius: 15px;
-}
-
-#overlay {
-  display: none;
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.85);
-  backdrop-filter: blur(10px);
-  padding: 30px;
-  overflow: auto;
-}
-
-.panel {
-  max-width: 650px;
-  margin: auto;
-  background: var(--card);
-  padding: 30px;
-  border-radius: 20px;
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
-  <h1 id="name">Aaradhya</h1>
-  <p class="subtitle" id="tagline">Pianist • Learner • Music Lover</p>
+  <h1>Aaradhya 🎹</h1>
+  <p id="visitorCount">Visitors: ...</p>
 </header>
 
-<section>
-  <h2>About Me</h2>
-  <p id="about">This is my piano journey and musical space.</p>
+<section id="login">
+  <input id="email" placeholder="Email">
+  <input id="password" type="password" placeholder="Password">
+  <button onclick="login()">Login</button>
 </section>
 
-<section>
-  <h2>🎵 My Piano Recordings</h2>
-  <div id="songs"></div>
+<section id="content" style="display:none">
+  <h2>🎥 Video Gallery</h2>
+  <div id="videos"></div>
 </section>
 
-<section>
-  <h2>📸 Gallery</h2>
-  <div class="gallery" id="gallery"></div>
-</section>
-
-<button class="admin-btn" onclick="openLogin()">Admin</button>
-
-<!-- LOGIN -->
-<div id="overlay">
-  <div class="panel" id="loginPanel">
-    <h2>Admin Login</h2>
-    <input id="password" type="password" placeholder="Enter password">
-    <button onclick="login()" style="background:var(--accent)">Login</button>
-  </div>
-
-  <!-- ADMIN -->
-  <div class="panel" id="adminPanel" style="display:none">
-    <h2>Update Website</h2>
-
-    <input id="nameInput" placeholder="Name">
-    <input id="taglineInput" placeholder="Tagline">
-    <textarea id="aboutInput" placeholder="About text"></textarea>
-
-    <h3>Add Song (MP3 file name)</h3>
-    <input id="songInput" placeholder="example.mp3">
-    <button onclick="addSong()">Add Song</button>
-
-    <h3>Add Image (file name)</h3>
-    <input id="imageInput" placeholder="photo.jpg">
-    <button onclick="addImage()">Add Image</button>
-
-    <br><br>
-    <button onclick="saveData()" style="background:var(--accent)">Save All</button>
-    <button onclick="closeAdmin()" style="background:#ff5f5f;color:white">Close</button>
-  </div>
-</div>
-
-<script>
-const ADMIN_PASSWORD = "piano123"; // change this
-
-let songs = JSON.parse(localStorage.songs || "[]");
-let images = JSON.parse(localStorage.images || "[]");
-
-function openLogin() {
-  overlay.style.display = "block";
-  loginPanel.style.display = "block";
-  adminPanel.style.display = "none";
-}
-
-function login() {
-  if (password.value === ADMIN_PASSWORD) {
-    loginPanel.style.display = "none";
-    adminPanel.style.display = "block";
-    loadInputs();
-  } else {
-    alert("Wrong password");
-  }
-}
-
-function closeAdmin() {
-  overlay.style.display = "none";
-}
-
-function loadInputs() {
-  nameInput.value = localStorage.name || "";
-  taglineInput.value = localStorage.tagline || "";
-  aboutInput.value = localStorage.about || "";
-}
-
-function saveData() {
-  localStorage.name = nameInput.value;
-  localStorage.tagline = taglineInput.value;
-  localStorage.about = aboutInput.value;
-  localStorage.songs = JSON.stringify(songs);
-  localStorage.images = JSON.stringify(images);
-  loadData();
-  closeAdmin();
-}
-
-function addSong() {
-  if (songInput.value) {
-    songs.push(songInput.value);
-    songInput.value = "";
-  }
-}
-
-function addImage() {
-  if (imageInput.value) {
-    images.push(imageInput.value);
-    imageInput.value = "";
-  }
-}
-
-function loadData() {
-  if (localStorage.name) name.textContent = localStorage.name;
-  if (localStorage.tagline) tagline.textContent = localStorage.tagline;
-  if (localStorage.about) about.textContent = localStorage.about;
-
-  songsDiv = document.getElementById("songs");
-  songsDiv.innerHTML = "";
-  songs.forEach(s => {
-    songsDiv.innerHTML += `<audio controls src="${s}"></audio>`;
-  });
-
-  gallery.innerHTML = "";
-  images.forEach(i => {
-    gallery.innerHTML += `<img src="${i}">`;
-  });
-}
-
-loadData();
-</script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<script src="app.js"></script>
 
 </body>
 </html>
