--- a/index.html
+++ b/index.html
@@ -2,117 +2,46 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Aaradhya | Piano</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
   <h1>Aaradhya 🎹</h1>
-  <p id="visitorCount">Visitors: ...</p>
+  <p id="visitorCount"></p>
 </header>
 
-<section id="login">
-  <input id="email" placeholder="Email">
+<section id="loginBox">
+  <input id="username" placeholder="Username">
   <input id="password" type="password" placeholder="Password">
   <button onclick="login()">Login</button>
-  <button onclick="googleLogin()" style="background:#4285F4;color:white;">Login with Google</button>
 </section>
 
-<section id="content" style="display:none">
-  <section>
-    <h2>🎥 Video Gallery</h2>
-    <div id="videos"></div>
-  </section>
+<section id="content" class="hidden">
 
-  <section>
-    <h2>📸 Image Gallery</h2>
-    <div class="gallery" id="gallery"></div>
-  </section>
+<h2>🎥 Video Gallery</h2>
+<div class="videos">
+  <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
+  <iframe src="https://www.youtube.com/embed/9bZkp7q19f0"></iframe>
+</div>
 
-  <section>
-    <h2>🎵 Piano Recordings</h2>
-    <div id="songs"></div>
-  </section>
+<h2>📸 Image Gallery</h2>
+<div class="gallery">
+  <img src="https://picsum.photos/300/200?1">
+  <img src="https://picsum.photos/300/200?2">
+  <img src="https://picsum.photos/300/200?3">
+</div>
+
+<h2>🎵 Piano Recordings</h2>
+<div class="songs">
+  <audio controls src="song1.mp3"></audio>
+  <audio controls src="song2.mp3"></audio>
+</div>
+
 </section>
 
-<script type="module">
-
-// Firebase v9+ imports
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics.js";
-import { getAuth, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-import { getFirestore, doc, getDoc, setDoc, collection, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
-
-// 🔥 Firebase config (yours)
-const firebaseConfig = {
-  apiKey: "AIzaSyC4k4EhNS9jbJs7TjKU705uZ0oOtcXGabk",
-  authDomain: "piano-cea95.firebaseapp.com",
-  projectId: "piano-cea95",
-  storageBucket: "piano-cea95.firebasestorage.app",
-  messagingSenderId: "222706527640",
-  appId: "1:222706527640:web:b7adf304a4f8accb878fed",
-  measurementId: "G-DE93V7RN6M"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-const auth = getAuth(app);
-const db = getFirestore(app);
-
-// 🔐 Email login
-window.login = async function () {
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("password").value;
-  try {
-    await signInWithEmailAndPassword(auth, email, password);
-    document.getElementById("login").style.display = "none";
-    document.getElementById("content").style.display = "block";
-  } catch (e) {
-    alert(e.message);
-  }
-};
-
-// 🌐 Google login
-window.googleLogin = async function () {
-  const provider = new GoogleAuthProvider();
-  try {
-    await signInWithPopup(auth, provider);
-    document.getElementById("login").style.display = "none";
-    document.getElementById("content").style.display = "block";
-  } catch (e) {
-    alert(e.message);
-  }
-};
-
-// 📊 Visitor counter
-async function updateVisitorCount() {
-  const ref = doc(db, "stats", "visits");
-  const snap = await getDoc(ref);
-  let count = snap.exists() ? snap.data().count + 1 : 1;
-  await setDoc(ref, { count });
-  document.getElementById("visitorCount").innerText = "Visitors: " + count;
-}
-
-// 🎥 Video gallery
-function loadVideos() {
-  const container = document.getElementById("videos");
-  onSnapshot(collection(db, "videos"), snap => {
-    container.innerHTML = "";
-    snap.forEach(d => {
-      container.innerHTML += `<iframe src="https://www.youtube.com/embed/${d.data().id}" allowfullscreen></iframe>`;
-    });
-  });
-}
-
-// 🔥 Run on page load
-updateVisitorCount();
-loadVideos();
-
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
-
