--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </section>
 
 <!-- 🔐 ADMIN LOGIN (hidden) -->
-<button id="adminBtn" onclick="openAdmin()">Admin</button>
+<button onclick="alert('JS is working')">Admin</button>
 
 <div id="adminLogin" class="hidden">
   <input id="adminPass" type="password" placeholder="Admin password">
